--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -13,6 +13,16 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
+        .tab-content {
+            opacity: 0;
+            transition: opacity 0.2s ease-in-out;
+        }
+        .tab-content.active {
+            opacity: 1;
+        }
+        .hidden {
+        display: none;
+        }
         #notificationBox {
             animation: popUp 0.5s ease forwards, fadeOut 0.5s ease forwards 3.5s;
             transform-origin: top right;
@@ -43,6 +53,9 @@
                 visibility: hidden;
             }
         }
+
+
+</style>
 
     </style>
 </head>
