--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -73,10 +73,23 @@
         </div>
       </div>
     </div>
-    <div class="px-10 block lg:hidden">
+    <div class="pr-8 flex lg:hidden">
+      <a href="{% url 'cart_summary'%}" class="flex items-center px-1 py-2 rounded text-orange-500 font-bold border-orange-500">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 40 20" stroke-width="1.5" stroke="rgb(251 146 60)" class="w-8 h-8">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+          <rect x="25" y="-3" width="12" height="12" rx="10" fill="rgb(251 146 60)" stroke="rgb(251 146 60)" stroke-width="1.5" />
+          <text x="26.25" y="9" fill="black" stroke="black" stroke-width="0.5" id="cart_quantity">{{ cart|length }}</text>
+        </svg>
+      </a> 
+      <a {% if user.is_authenticated %} href="{% url 'update_user' %}" {% else %} href="{% url 'login' %}" {% endif %} class="flex items-center px-1 py-2 rounded text-orange-500 font-bold border-orange-500">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="rgb(251 146 60)" class="h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+        </svg>
+    </a>
+    
       <button id="toggle-btn"
-        class="flex items-center px-3 py-2 border rounded text-orange-500 font-bold border-orange-500">
-        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        class="flex items-center px-3 py-2 rounded text-orange-500 font-bold border-orange-500">
+        <svg class="fill-current h-3 w-3" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg">
           <title>Menu</title>
           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
         </svg>
