update style issue

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
     <title>T-Lab Studios - Audio and Video Production Studio in Sri Lanka</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon-32x32.png' %}">
     <script src="https://cdn.tailwindcss.com"></script>
