--- a/cart/templates/base.html
+++ b/cart/templates/base.html
@@ -6,9 +6,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="T-lab studios is a leading production company specializing in trusted HQ audio recording, music composing, video production & graphic designing services since 2017 ">
+    <meta name="keywords" content="tlabstudios, tlab, studios, colombo, thusith nirosha">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Helvetica">
-    <title>T-Lab Studios - Audio and Video Production Studio in Sri Lanka</title>
+    <title>T-Lab Studios</title>
     <link rel="icon" type="image/png" href="{ % static 'img/favicon-32x32.png'%}">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
