--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -65,8 +65,8 @@
 
     </div> -->
     <div class="flex justify-center">
-      <div class="items-center p-5" style="width: 90vw;">
-        <img src="{% static 'img/collage.webp' %}" alt="Description of your image" class="w-full" />
+      <div class="items-center " style="width: 90vw;">
+        <img src="{% static 'img/tlabbanner.png' %}" alt="Description of your image" class="w-full px-10 mb-4" />
       </div>
     </div>
     
