--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -33,10 +33,10 @@
             <li>Correct handling of playback technology in live performance and basic principles of live looping technology</li>
         </ul>
         
-        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
+        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 </p>
           <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
             <div>
-            <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+            <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
           </div>
         </div>
       </section>
