--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -4,14 +4,14 @@
 <div class="animated-text">
   <h2 class="text-5xl font-bold text-white text-center pt-20">T-Lab Academy</h2>
 </div>
-<section style="padding: 1vw 5vw;" class="border-b border-orange-500">
+<!-- <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
 <h3 class="text-2xl font-bold text-white mb-5 text-white p-8">Our Courses</h3>
 <div id="productContainer" class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
   <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academy post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-sm text-gray-200 p-2">Ableton Live Crash Course for Beginners</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
   <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4 transparent-background"><img src="{% static 'img/course 2.jpeg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class=" transparent-background text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
 
 </div>
-</section>
+</section> -->
 <section>
 <div>
   <h3 class="text-2xl font-bold text-orange-500 m-8 px-8 text-white">Ableton Live Crash Course for Beginners | New Intake</h3>
@@ -24,16 +24,15 @@
 
           </br>
           <ul class="text-sm text-gray-500 list-disc pl-5">
-            <li>Ableton Live software simply and clearly</li>
+            <li>Cubase software simply and clearly</li>
             <li>Audio Recording: Accurately record live sounds of voices and musical instruments</li>
             <li>Create songs using MIDI and leading VSTi (e.g., Kontakt)</li>
             <li>Completing a song using Audio and MIDI</li>
             <li>Improving tone and adjusting modulation using Compressor, EQ, Pitch Correction, Reverb, and Delay effects accurately</li>
             <li>Using MIX and MASTER to increase the quality of the song with a good sound combination</li>
-            <li>Correct handling of playback technology in live performance and basic principles of live looping technology</li>
         </ul>
         
-        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 </p>
+        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact - 0776141142</p>
           <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
             <div>
             <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
