--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -14,7 +14,7 @@
 </section> -->
 <section>
 <div>
-  <h3 class="text-2xl font-bold text-orange-500 m-8 px-8 text-white">Ableton Live Crash Course for Beginners | New Intake</h3>
+  <h3 class="text-2xl font-bold text-orange-500 m-8 mt-10 px-8 text-white">Ableton Live Crash Course for Beginners | New Intake</h3>
   <div class="flex flex-col md:flex-row" style="padding: 0.1vw 5vw;">
     <!-- First Column -->
     <div class="md:w-1/2 custom-padding px-8 py-6 bg-black">
@@ -23,7 +23,7 @@
           Playback Technology Learn how to make digital music the right way</p>
 
           </br>
-          <ul class="text-sm text-gray-500 list-disc pl-5">
+          <ul class="text-sm text-gray-500 list-disc pl-5 mb-2">
             <li>Cubase software simply and clearly</li>
             <li>Audio Recording: Accurately record live sounds of voices and musical instruments</li>
             <li>Create songs using MIDI and leading VSTi (e.g., Kontakt)</li>
@@ -32,7 +32,7 @@
             <li>Using MIX and MASTER to increase the quality of the song with a good sound combination</li>
         </ul>
         
-        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
+        <a href="https://wa.link/owuuyf" class="text-gray-300 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142</a>
           <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
             <div>
             <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
@@ -49,7 +49,7 @@
     </div>
     <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
       <div class="">
-        <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+        <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
       </a>
     </div>
   </div>   
