update phone numbers

--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -82,7 +82,7 @@
             Playback Technology Learn how to make digital music the right way</p>
   
             </br>
-            <ul class="text-sm text-gray-500 list-disc pl-5">
+            <ul class="text-sm text-gray-500 list-disc pl-5 mb-2">
               <li>Ableton Live software simply and clearly</li>
               <li>Audio Recording: Accurately record live sounds of voices and musical instruments</li>
               <li>Create songs using MIDI and leading VSTi (e.g., Kontakt)</li>
@@ -92,7 +92,7 @@
               <li>Correct handling of playback technology in live performance and basic principles of live looping technology</li>
           </ul>
           
-          <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
+          <a href="https://wa.link/owuuyf" class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142</a>
             <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
               <div>
               <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
