--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -9,7 +9,6 @@
 <div id="productContainer" class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
   <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academy post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-sm text-gray-200 p-2">Ableton Live Crash Course for Beginners</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
   <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4 transparent-background"><img src="{% static 'img/course 2.jpeg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class=" transparent-background text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
-
 </div>
 </section> -->
 <section>
@@ -17,6 +16,17 @@
   <h3 class="text-2xl font-bold text-orange-500 m-8 mt-10 px-8 text-white">Ableton Live Crash Course for Beginners | New Intake</h3>
   <div class="flex flex-col md:flex-row" style="padding: 0.1vw 5vw;">
     <!-- First Column -->
+    <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
+      <div class="image-container">
+        <img src="{% static 'img/academy post.jpg'%}"  class="rounded-lg">
+      </div>
+    </div>
+    <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
+      <div class="">
+        <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+      </a>
+      </div>
+    </div>
     <div class="md:w-1/2 custom-padding px-8 py-6 bg-black">
       <section id="composing">
         <p class="text-gray-500 pb-2 text-md"> Introducing T-LAB Academy's latest music production course | Ableton Live &
@@ -40,19 +50,6 @@
         </div>
       </section>
     </div>
-
-    <!-- Second Column -->
-    <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
-      <div class="image-container">
-        <img src="{% static 'img/academy post.jpg'%}"  class="rounded-lg">
-      </div>
-    </div>
-    <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
-      <div class="">
-        <a href="https://forms.gle/8hGoD3BrCwxhBDYd7" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
-      </a>
-    </div>
-  </div>   
 </div> 
 </section>
 <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
@@ -76,8 +73,18 @@
     <h3 class="text-2xl font-bold text-orange-500 m-8 px-8 text-white">Music Production with Cubase | New Intake</h3>
     <div class="flex flex-col md:flex-row" style="padding: 0.1vw 5vw;">
       <!-- First Column -->
+      <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
+        <div class="image-container">
+          <img src="{% static 'img/course 2.jpeg'%}"  class="rounded-lg">
+        </div>
+      </div>
+      <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
+        <div class="">
+          <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Coming Soon</a>
+          </a>
+        </div>
+      </div> 
       <div class="md:w-1/2 custom-padding px-8 py-6 bg-black">
-        <section id="composing">
           <p class="text-gray-500 pb-2 text-md"> Introducing T-LAB Academy's latest music production course | Ableton Live &
             Playback Technology Learn how to make digital music the right way</p>
   
@@ -98,24 +105,13 @@
               <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
             </div>
           </div>
-        </section>
       </div>
   
       <!-- Second Column -->
-      <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
-        <div class="image-container">
-          <img src="{% static 'img/course 2.jpeg'%}"  class="rounded-lg">
-        </div>
-      </div>
-      <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
-        <div class="">
-          <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
-        </a>
-      </div>
-    </div>   
+        
   </div> 
   </section>
-  <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
+  <!-- <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
     <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Lectures</h3>
     <div  class="px-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
       <div class="bg-black p-4 rounded-lg shadow-md mb-4">
@@ -124,7 +120,7 @@
         <p class="text-gray-600 px-4 pb-2 text-sm">Founder of T-Lab Studios / Music Producer</p>
     </div>
       </div>
-  </section>
+  </section> -->
 
 
 {% endblock %}
