--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -102,7 +102,7 @@
           <a href="https://wa.link/owuuyf" class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142</a>
             <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
               <div>
-              <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+              <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Coming Soon</a>
             </div>
           </div>
       </div>
